# llama.cpp

./: CMakeLists.txt
barrier_check/lib/cmake/ggml/: ggml-config.cmake  ggml-version.cmake
barrier_check/lib/cmake/llama/: llama-config.cmake
dvfs_check/lib/pkgconfig/: llama.pc
examples/simple-chat/: simple-chat.cpp
ggml/include/: ggml-dvfs.h
ggml/src/: CMakeLists.txt  arithmetic_intensity.cpp  arithmetic_intensity.h
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ggml-dvfs.c
src/: llama-context.cpp
tllm/: CMakeLists.txt  test_dvfs.c
